--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
     "sass": "^1.52.3",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^10.2.1",
     "stylelint": "^14.9.0",
     "stylelint-config-airbnb": "0.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
@@ -128,6 +128,7 @@
     "stylelint-config-standard-scss": "^4.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-scss": "^4.2.0",
+    "uview-ui": "^2.0.31",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
@@ -148,7 +149,7 @@
     ],
     "*{.js,.vue}": [
       "prettier --write ./src",
-      "stylelint \"src/**/*.{vue,scss}\" --fix",
+      "stylelint \"src/**/*.vue\" --fix",
       "eslint --ext .js,.vue --fix ./src",
       "git add"
     ]
