--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@dcloudio/uni-quickapp-webview": "^2.0.1-34720220422002",
     "@dcloudio/uni-stat": "^2.0.1-34720220422002",
     "@vue/shared": "^3.0.0",
+    "better-mock": "^0.3.4",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "postcss-import": "^12.0.1",
